--- a/index.html
+++ b/index.html
@@ -5,22 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" type="module"></script>
     <title>war</title>
+    <script src="script.js" type="module"></script>
 </head>
 <body>
-    <div class="computer-deck deck">26</div>
-    <div class="computer-deck-slot card-slot">
-        <div class="card red" data-value="9♥">
-            ♥
-        </div>
-    </div>
-    <div class="text">ku,g</div>
-    <div class="player-deck deck">26</div>
-    <div class="player-deck-slot card-slot">
-        <div class="card black" data-value="6♠">
-            ♠
-        </div>
-    </div>
+    <div class="computer-deck deck"></div>
+    <div class="computer-card-slot card-slot"></div>
+    <div class="text"></div>
+    <div class="player-deck deck"></div>
+    <div class="player-card-slot card-slot"></div>
 </body>
 </html>
